# CCSession

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.vue  router.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_paths.rs  commands.rs  delete_service.rs  history_store.rs  lib.rs  log_store.rs  main.rs  models.rs  session_detail.rs  session_list.rs  state_store.rs  test_support.rs
src/api/: sessions.ts
src/components/: AppFeedbackPanel.vue  AppFrame.vue  DeleteDialog.vue  DeleteSessionsDialog.vue  SessionDetail.vue  SessionList.vue  SessionRow.vue  StatePanel.vue
src/components/session/: SessionDetailHeader.vue  SessionDetailStateCard.vue  SessionListBrowser.vue  SessionListItem.vue  SessionListStateCard.vue  SessionMetadataCard.vue  SessionPromptsCard.vue
src/composables/: useSessionPrompts.ts  useSessionStore.ts  useThemeMode.ts
src/composables/session-store/: useSessionDelete.ts  useSessionIndex.ts
src/pages/: SessionDetailPage.vue  SessionListPage.vue
src/utils/: sessionFormat.ts
