[package]
name = "ccsession"
version = "0.1.0"
description = "A Tauri app to clear codex sessions."
edition = "2021"
license = "MIT"

[lib]
name = "ccsession_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
