[package]
name = "ccsession"
version = "2.0.0"
description = "CCSession desktop app for cleaning local Codex sessions."
edition = "2021"
license = "MIT"

[lib]
name = "ccsession_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
trash = "5.2.5"

[dev-dependencies]
tempfile = "3"
